@@ -53,6 +53,7 @@ Origo Publisher
 ProjectConfig
 ----------------------
 * ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.
+* Add forceBuildNewProject attribute. Setting to false will not attempt to build if the .SER file is missing (CC-380). Reported by Greg Gipson, Patch by Spencer Smith.
 
 SSCM/SSCMBootstrapper
 ----------------------
